src/plugins/autotest/quick/quicktestconfiguration.h
@@ -37,7 +37,7 @@ public:
     TestOutputReader *outputReader(const QFutureInterface<TestResultPtr> &fi,
                                    QProcess *app) const override;
     QStringList argumentsForTestRunner(QStringList *omitted = nullptr) const override;
-
+    Utils::Environment filteredEnvironment(const Utils::Environment &original) const override;
     void setUnnamedOnly(bool unnamedOnly);
     bool unnamedOnly() const { return m_unnamedOnly; }
 
