src/plugins/autotest/gtest/gtestconfiguration.cpp
@@ -107,5 +107,17 @@ QStringList GTestConfiguration::argumentsForTestRunner(QStringList *omitted) con
     return arguments;
 }
 
+Utils::Environment GTestConfiguration::filteredEnvironment(const Utils::Environment &original) const
+{
+    const QStringList interfering{"GTEST_FILTER", "GTEST_COLOR", "GTEST_ALSO_RUN_DISABLED_TESTS",
+                                  "GTEST_REPEAT", "GTEST_SHUFFLE", "GTEST_RANDOM_SEED",
+                                  "GTEST_OUTPUT", "GTEST_BREAK_ON_FAILURE", "GTEST_PRINT_TIME",
+                                  "GTEST_CATCH_EXCEPTIONS"};
+    Utils::Environment result = original;
+    for (const QString &key : interfering)
+        result.unset(key);
+    return result;
+}
+
 } // namespace Internal
 } // namespace Autotest
