src/plugins/autotest/gtest/gtestconfiguration.h
@@ -37,6 +37,7 @@ public:
     TestOutputReader *outputReader(const QFutureInterface<TestResultPtr> &fi,
                                    QProcess *app) const override;
     QStringList argumentsForTestRunner(QStringList *omitted = nullptr) const override;
+    Utils::Environment filteredEnvironment(const Utils::Environment &original) const override;
 };
 
 } // namespace Internal
